--- a/task/pom.xml
+++ b/task/pom.xml
@@ -51,6 +51,11 @@
         
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.2.RELEASE</version>
         </dependency>
