--- a/task/src/main/webapp/WEB-INF/web.xml
+++ b/task/src/main/webapp/WEB-INF/web.xml
@@ -61,71 +61,7 @@
         <session-timeout>30</session-timeout>
     </session-config>
     <jsp-config>
-        <jsp-property-group>
-            <url-pattern>/private/*</url-pattern>
-        </jsp-property-group>
-        <jsp-property-group>
-            <url-pattern>*.jsp</url-pattern>
-            <page-encoding>UTF-8</page-encoding>
-        </jsp-property-group>
     </jsp-config>
-    <security-constraint>
-        <display-name>AccessPrivate</display-name>
-        <web-resource-collection>
-            <web-resource-name>private</web-resource-name>
-            <description/>
-            <url-pattern>/private/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <description/>
-            <role-name>private</role-name>
-            <role-name>hr</role-name>
-            <role-name>task</role-name>
-        </auth-constraint>
-    </security-constraint>
-    <security-constraint>
-        <display-name>ConstraintHr</display-name>
-        <web-resource-collection>
-            <web-resource-name>hr</web-resource-name>
-            <description/>
-            <url-pattern>/private/hr/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <description/>
-            <role-name>hr</role-name>
-        </auth-constraint>
-    </security-constraint>
-    <security-constraint>
-        <display-name>ConstraintTask</display-name>
-        <web-resource-collection>
-            <web-resource-name>task</web-resource-name>
-            <description/>
-            <url-pattern>/private/task/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <description/>
-            <role-name>task</role-name>
-        </auth-constraint>
-    </security-constraint>
-    <login-config>
-        <auth-method>FORM</auth-method>
-        <form-login-config>
-            <form-login-page>/private/login.jsp</form-login-page>
-            <form-error-page>/private/error.jsp</form-error-page>
-        </form-login-config>
-    </login-config>
-    <security-role>
-        <description/>
-        <role-name>private</role-name>
-    </security-role>
-    <security-role>
-        <description/>
-        <role-name>hr</role-name>
-    </security-role>
-    <security-role>
-        <description/>
-        <role-name>task</role-name>
-    </security-role>
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -142,4 +78,29 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <security-constraint>
+        <display-name>private</display-name>
+        <web-resource-collection>
+            <web-resource-name>Private</web-resource-name>
+            <description/>
+            <url-pattern>/private/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>private</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/resources/login/login.jsp</form-login-page>
+            <form-error-page>/resources/login/error.jsp</form-error-page>
+        </form-login-config>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>private</role-name>
+    </security-role>
 </web-app>
