--- a/task/src/main/webapp/WEB-INF/web.xml
+++ b/task/src/main/webapp/WEB-INF/web.xml
@@ -1,58 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>ServletEnd</servlet-name>
-        <servlet-class>kievreclama.task.servlets.ServletEnd</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>Newtask</servlet-name>
-        <servlet-class>kievreclama.task.servlets.NewTask</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateTask</servlet-name>
-        <servlet-class>kievreclama.task.servlets.UpdateTask</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>ServletFilterIndex</servlet-name>
-        <servlet-class>kievreclama.task.servlets.ServletFilterIndex</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>FilterClear</servlet-name>
-        <servlet-class>kievreclama.task.servlets.FilterClear</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>DeleteTask</servlet-name>
-        <servlet-class>kievreclama.task.servlets.DeleteTask</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>ServletEnd</servlet-name>
-        <url-pattern>/private/ServletEnd</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ServletFilterIndex</servlet-name>
-        <url-pattern>/ServletFilterIndex</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>FilterClear</servlet-name>
-        <url-pattern>/FilterClear</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>DeleteTask</servlet-name>
-        <url-pattern>/private/DeleteTask</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Newtask</servlet-name>
-        <url-pattern>/private/ts/NewTask</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateTask</servlet-name>
-        <url-pattern>/private/ts/UpdateTask</url-pattern>
-    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
@@ -92,6 +44,20 @@
             <role-name>private</role-name>
         </auth-constraint>
     </security-constraint>
+    <security-constraint>
+        <display-name>employee</display-name>
+        <web-resource-collection>
+            <web-resource-name>employee</web-resource-name>
+            <description/>
+            <url-pattern>/private/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>employee</role-name>
+        </auth-constraint>
+    </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
         <form-login-config>
@@ -102,5 +68,9 @@
     <security-role>
         <description/>
         <role-name>private</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>employee</role-name>
     </security-role>
 </web-app>
