add connection pool c3p0

--- a/task/pom.xml
+++ b/task/pom.xml
@@ -38,6 +38,17 @@
             <version>${version-Hivbernate}</version>
         </dependency>
         <dependency>
+    		<groupId>c3p0</groupId>
+    		<artifactId>c3p0</artifactId>
+    		<version>0.9.1.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>9.4-1201-jdbc41</version>
+		</dependency>
+        
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
