--- a/task/pom.xml
+++ b/task/pom.xml
@@ -38,6 +38,11 @@
             <version>${version-Hivbernate}</version>
         </dependency>
         <dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-c3p0</artifactId>
+    		<version>${version-Hivbernate}</version>
+		</dependency>
+        <dependency>
     		<groupId>c3p0</groupId>
     		<artifactId>c3p0</artifactId>
     		<version>0.9.1.2</version>
