--- a/task/src/main/webapp/WEB-INF/web.xml
+++ b/task/src/main/webapp/WEB-INF/web.xml
@@ -66,4 +66,20 @@
         <description/>
         <role-name>employee</role-name>
     </security-role>
+    <filter>
+    	<filter-name>characterEncodingFilter</filter-name>
+    	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    	<init-param>
+        	<param-name>encoding</param-name>
+        	<param-value>UTF-8</param-value>
+    	</init-param>
+    	<init-param>
+        	<param-name>forceEncoding</param-name>
+        	<param-value>true</param-value>
+    	</init-param>
+	</filter>
+	<filter-mapping>
+    	<filter-name>characterEncodingFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
