--- a/task/pom.xml
+++ b/task/pom.xml
@@ -19,6 +19,7 @@
         <jstl.version>1.2</jstl.version>
         <springframework-version>4.3.2.RELEASE</springframework-version>
         <springframework.security-version>4.2.2.RELEASE</springframework.security-version>
+        <hibernate-validator.version>5.4.1.Final</hibernate-validator.version>
     </properties>
     
     <dependencies>
@@ -112,6 +113,20 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${springframework.security-version}</version>
+		</dependency>
+		
+		<!-- validation-api -->
+		<dependency>
+    		<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+    		<version>1.1.0.Final</version>
+		</dependency>
+		
+		<!-- hibernate-validator -->
+		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-validator</artifactId>
+    		<version>${hibernate-validator.version}</version>
 		</dependency>
     </dependencies>
 
