--- a/task/pom.xml
+++ b/task/pom.xml
@@ -124,6 +124,7 @@
     </dependencies>
 
     <build>
+    <finalName>task</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
