--- a/task/pom.xml
+++ b/task/pom.xml
@@ -20,6 +20,7 @@
 		<postgresql.version>9.4-1201-jdbc41</postgresql.version>
 		<json.version>20090211</json.version>
 		<version-jstl>1.2</version-jstl>
+		<modelmapper.version>2.3.8</modelmapper.version>
 		<javax.servlet-api-version>4.0.1</javax.servlet-api-version>
 		<springframework-version>5.1.9.RELEASE</springframework-version>
 		<springframework.security-version>5.1.6.RELEASE</springframework.security-version>
@@ -77,6 +78,13 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${version-jstl}</version>
+		</dependency>
+	
+		<!-- ModelMapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
 		</dependency>
 
 		<!-- Spring framework -->
