--- a/task/pom.xml
+++ b/task/pom.xml
@@ -14,14 +14,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<version-hibernate>5.4.2.Final</version-hibernate>
 		<json.version>20090211</json.version>
 		<version-jstl>1.2</version-jstl>
 		<modelmapper.version>2.3.8</modelmapper.version>
 		<javax.servlet-api-version>4.0.1</javax.servlet-api-version>
-		<springframework-version>5.2.7.RELEASE</springframework-version>
-		<springframework.security-version>5.1.6.RELEASE</springframework.security-version>
+		<springframework-version>5.3.12</springframework-version>
+		<springframework.security-version>5.5.3</springframework.security-version>
 		<hibernate-validator.version>5.4.2.Final</hibernate-validator.version>
 	</properties>
 
